Prevent scrollbar from offsetting page on tab change, added Bootstrap theme

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: Helvetica;
     background: #EEEEEE;
+    overflow-y: scroll;
 }
 
 ul.menuTabs {
